1999-04-05  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* FLIM-CFG: Make easier to install in VERSION_SPECIFIC_LISPDIR.

1999-03-29  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* mime.el (mime-read-field): Correct argument of
	`mime-decode-field-body'; 'native -> 'plain.

1999-03-27  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* eword-encode.el (TopLevel): Require 'cl when compiling.
	(eword-encode-rword-list): Suppress insertion of extra spaces.
	(eword-encode-msg-id-to-rword-list): Treat surrounding angle
	brackets atomically.
	([tm-ja:4244] by Kazuhiro Ohta <ohta@ele.cst.nihon-u.ac.jp>)

1999-03-11  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-encode.el (eword-charset-encoding-alist): Add `tis-620'.

1999-03-01  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mel.el (mime-decode-string): Return STRING if return value of
 	`(mel-find-function 'mime-decode-string encoding)' is nil.

1999-02-10  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-def.el (mel-define-service): Change size of obarray to 7.

1999-02-01  Yoshiki Hayashi  <g740685@komaba.ecc.u-tokyo.ac.jp>

	* mime-ja.sgml: Tranlate all untranslated parts.


1999-01-27  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* FLIM: Version 1.12.5 (Hirahata) released.

	* mime-ja.sgml, mime-en.sgml: Sync with FLIM API 1.12.

1999-01-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* NEWS (New optional argument of `std11-field-end'): New
	subsection.

	* std11.el (std11-field-end): Add new optional argument `bound'.


1999-01-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* FLIM: Version 1.12.4 (Tsutsui) released.

1999-01-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* README.en: Sync with latest FLIM.

	* README.ja: fixed.

1999-01-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mmbuffer.el, mmgeneric.el (insert-entity-content): New method.

	* mime.el (mime-insert-entity-content): New generic function.

1999-01-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* NEWS (New function `mime-find-entity-from-content-id'): New