@@ -1,3 +1,9 @@
+1999-04-09  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* smtp.el (smtp-server): Funcall `smtp-server' if it is a function.
+	(smtp-server): Make it can also be a function called from
+	`smtp-via-smtp' with arguments SENDER and RECIPIENTS.
+
 1999-04-05  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
 	* FLIM-CFG: Make easier to install in VERSION_SPECIFIC_LISPDIR.
